feat(build): add ENABLE_LOW_LATENCY option for ultra-low-latency builds
- Add ENABLE_LOW_LATENCY CMake option (OFF by default)
- Add cppmusic_add_low_latency_flags() function to ToolchainFlags.cmake
- Include -ffast-math -fno-exceptions -fno-rtti when enabled
- Update CONTRIBUTING.md and SECURITY.md with documentation
- Integrate low-latency flags into cppmusic_apply_all_flags()

This allows developers to opt into aggressive optimizations for
real-time audio processing while understanding the tradeoffs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ option(BUILD_MAIN_APP "Build main application" ON)
 option(ENABLE_ASAN "Enable AddressSanitizer" OFF)
 option(ENABLE_UBSAN "Enable UndefinedBehaviorSanitizer" OFF)
 option(ENABLE_LTO "Enable Link Time Optimization" OFF)
+option(ENABLE_LOW_LATENCY "Enable low-latency flags (-ffast-math -fno-exceptions -fno-rtti)" OFF)
 option(ENABLE_JUCE "Enable JUCE framework (stub for future use)" ON)
 option(ENABLE_PORTAUDIO "Enable PortAudio backend (stub for future use)" OFF)
 option(ENABLE_RUBBERBAND "Enable RubberBand time-stretching library" OFF)
