Implement real-time audio engine with SDL2
- Add AudioEngine class with actual sound synthesis
- Implement 16-step sequencer with real pattern playback
- Add waveform synthesis: Sine, Square, Saw, Triangle, Noise
- Create kick drums with pitch envelope for realistic sound
- Wire transport controls to audio playback
- Sync Channel Rack UI with audio engine state
- Add step-by-step sequencer advancement
- Implement mute/solo channel functionality
- Add FL Studio-style orange step indicators
- Enable real audio output at 44100Hz stereo

--- a/src/ui/imgui/CMakeLists.txt
+++ b/src/ui/imgui/CMakeLists.txt
@@ -85,6 +85,7 @@ set(IMGUI_UI_SOURCES
     App.cpp
     Theme.cpp
     Shortcuts.cpp
+    audio/AudioEngine.cpp
     panels/TransportBar.cpp
     panels/BrowserPanel.cpp
     panels/ChannelRackPanel.cpp
@@ -99,6 +100,7 @@ set(IMGUI_UI_HEADERS
     App.hpp
     Theme.hpp
     Shortcuts.hpp
+    audio/AudioEngine.hpp
     panels/TransportBar.hpp
     panels/BrowserPanel.hpp
     panels/ChannelRackPanel.hpp
